apps/04-databases/cloudnative-pg/overlays/prod/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudnative-pg
  namespace: cnpg-system
spec:
  template:
    spec:
      priorityClassName: vixens-critical
      containers:
        - name: manager
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
