apps/04-databases/cloudnative-pg/overlays/prod/servicemonitor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloudnative-pg-metrics
  namespace: cnpg-system
  labels:
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: cloudnative-pg
    app: cloudnative-pg
spec:
  selector:
    app.kubernetes.io/instance: cloudnative-pg
    app.kubernetes.io/name: cloudnative-pg
  ports:
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: metrics
